syntax = "proto3";

package pb;

message Part {
  string Key = 1;
  bytes Data = 2;
}

message FullState {
  repeated Part parts = 1;
}
message StatusInput {}
message StatusOutput {
  string layer = 1;
  string status = 2;
}
message SendEventInput {
  bytes payload = 1;
}
message SendEventOutput {}

message PrepareShutdownInput{
  string ID = 1;
  uint64 Index = 2;
}

message RequestAdoptionInput {
  string ID = 1;
  string Address = 2;
}
message RequestAdoptionOutput {}

message PrepareShutdownOutput{}

service Layer {
  rpc PrepareShutdown(PrepareShutdownInput) returns (PrepareShutdownOutput);
  rpc RequestAdoption(RequestAdoptionInput) returns (RequestAdoptionOutput);
  rpc SendEvent(SendEventInput) returns (SendEventOutput);
}